--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <form action="siguiente.php" method="POST">
-            <fieldset data-nordpass-autofill="identity">
+            <fieldset>
                 <legend>Formulario de contacto</legend>
                 <label>Nombre:</label>
                 <input type="text" name="nombre">
@@ -24,7 +24,7 @@
                 <br>
                 <textarea name="consulta"></textarea>
                 <br><br>
-                <input type="reset" data-np-checked="1"> <br><br>
+                <input type="reset"> <br><br>
                 <input type="submit" value="Enviar">
             </fieldset>
         </form>
