--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Formulario</title>
     </head>
     <body>
-        <form action="siguiente.php" method="POST">
+        <form action="siguiente.php" method="GET">
             <fieldset>
                 <legend>Formulario de contacto</legend>
                 <label>Nombre:</label>
